--- a/BSharpNESEmu/BSharpNESEmu.csproj
+++ b/BSharpNESEmu/BSharpNESEmu.csproj
@@ -51,6 +51,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
     <Compile Include="Ricoh2A03CPU.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="ProcessStatusRegister.cs" />
