--- a/BSharpNESEmu/BSharpNESEmu.csproj
+++ b/BSharpNESEmu/BSharpNESEmu.csproj
@@ -52,6 +52,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="MemoryRep.cs" />
+    <Compile Include="IMemoryMap.cs" />
     <Compile Include="Ricoh2A03CPU.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="ProcessStatusRegister.cs" />
